Refactor weather card and update weather fetching

--- a/index.html
+++ b/index.html
@@ -280,18 +280,18 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
     
     <div onclick="toggleWeatherCard()" style="padding: 12px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; background: rgba(255, 215, 0, 0.05);">
         <div style="text-align: left;">
-            <h3 id="weather-title" style="margin: 0; color: #FFD700; font-size: 16px;">🌤️ Match Day Weather</h3>
-            <span id="match-date" style="font-size: 10px; color: #00e676;">Meadow Heights</span>
+            <h3 style="margin: 0; color: #FFD700; font-size: 16px;">🌤️ Match Day Weather</h3>
+            <span id="match-date" style="font-size: 10px; color: #00e676;">Meadow Heights • Sunday</span>
         </div>
-        <span id="toggle-icon" style="font-size: 12px; color: #FFD700;">[ Click to Hide ]</span>
+        <span id="toggle-icon" style="font-size: 11px; color: #FFD700; background: rgba(255,215,0,0.1); padding: 2px 8px; border-radius: 4px;">[ Click to View ]</span>
     </div>
 
-    <div id="weather-content" style="max-height: 500px; overflow: hidden; transition: max-height 0.4s ease-out; padding: 0 12px 12px 12px;">
-        <div id="weather-details" style="display: flex; flex-direction: column; gap: 6px; border-top: 1px solid rgba(255,215,0,0.1); padding-top: 10px;">
-            <p style="text-align:center; font-size:11px; color:#aaa;">Loading Sunday Forecast... 🛰️</p>
+    <div id="weather-content" style="max-height: 0px; overflow: hidden; transition: max-height 0.4s ease-out; padding: 0 12px;">
+        <div id="weather-details" style="display: flex; flex-direction: column; gap: 6px; border-top: 1px solid rgba(255,215,0,0.1); padding-top: 10px; padding-bottom: 10px;">
+            <p style="text-align:center; font-size:11px; color:#aaa;">Synchronizing live data... 🛰️</p>
         </div>
 
-        <div id="weather-footer" style="margin-top: 12px; background: rgba(211, 47, 47, 0.1); padding: 8px; border-radius: 8px; font-size: 10px; text-align: left; display:none; border: 1px dashed #d32f2f;">
+        <div id="weather-footer" style="margin-bottom: 12px; background: rgba(211, 47, 47, 0.1); padding: 8px; border-radius: 8px; font-size: 10px; text-align: left; display:none; border: 1px dashed #d32f2f;">
             <div id="alert-msg" style="color: #e57373; font-weight: bold; margin-bottom: 3px;"></div>
             <div id="wind-info" style="color: #ccc;"></div>
             <p style="margin: 4px 0 0 0; color: #ffeb3b; font-weight: bold; text-align: center;">⚠️ Caution: Lightning & Slippery Pitch!</p>
@@ -300,20 +300,20 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 </div>
 
 <script>
-// Toggle Function
+// Toggle Function - Starts Closed
 function toggleWeatherCard() {
     const content = document.getElementById('weather-content');
     const icon = document.getElementById('toggle-icon');
-    if (content.style.maxHeight === "0px") {
-        content.style.maxHeight = "500px";
+    if (content.style.maxHeight === "0px" || content.style.maxHeight === "") {
+        content.style.maxHeight = "600px"; // Expand
         icon.innerText = "[ Click to Hide ]";
     } else {
-        content.style.maxHeight = "0px";
+        content.style.maxHeight = "0px"; // Shrink
         icon.innerText = "[ Click to View ]";
     }
 }
 
-async function getSundayWeather() {
+async function getLiveWeather() {
     const lat = -37.64, lon = 144.92; // Meadow Heights
     const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&hourly=temperature_2m,precipitation_probability,weathercode,windspeed_10m&timezone=Australia%2FSydney&forecast_days=7`;
 
@@ -329,7 +329,6 @@ async function getSundayWeather() {
         document.getElementById('match-date').innerText = "Meadow Heights • " + nextSunday.toLocaleDateString('en-GB', {day:'numeric', month:'short'});
 
         const hourly = data.hourly;
-        // Schedule: 9:40 AM to 1:00 PM
         const slots = [
             { h: "09:00", label: "09:40 AM Gathering" },
             { h: "10:00", label: "10:30 AM Kick-off" },
@@ -361,24 +360,24 @@ async function getSundayWeather() {
 
                 html += `
                     <div style="display: flex; justify-content: space-between; align-items: center; background: rgba(255,255,255,0.04); padding: 6px 10px; border-radius: 6px; border-left: ${slot.h === "10:00" ? '2px solid #03A9F4' : 'none'};">
-                        <span style="font-weight: bold; width: 130px; font-size: 11px; color: #ddd;">${slot.label}</span>
+                        <span style="font-weight: bold; width: 135px; font-size: 11px; color: #ddd;">${slot.label}</span>
                         <span style="font-weight: bold; font-size: 13px;">${temp}°C <span style="font-size: 14px; margin-left: 3px;">${icon}</span></span>
                     </div>`;
             }
         });
 
         document.getElementById('weather-details').innerHTML = html;
-        // Data for Sunday Dec 21: Max rain ~60%, Thunderstorms expected
-        document.getElementById('alert-msg').innerText = isStormy ? "🚨 Scattered Thunderstorms Predicted!" : `💧 Rain Chance: ${highRain}%`;
-        // SE Wind 15-25 km/h
+        // Data for Sunday Dec 21: Thunderstorms & 60% Rain
+        document.getElementById('alert-msg').innerText = isStormy ? "🚨 Scattered Thunderstorms Predicted!" : `💧 Max Rain Chance: ${highRain}%`;
+        // SE Winds 15-25 km/h
         document.getElementById('wind-info').innerText = `🌬️ Wind: SE ${Math.round(windSpeed)} km/h`;
         document.getElementById('weather-footer').style.display = "block";
 
     } catch (e) {
-        document.getElementById('weather-details').innerHTML = "<p style='font-size:11px;'>Weather update unavailable.</p>";
+        document.getElementById('weather-details').innerHTML = "<p style='font-size:11px;'>Weather service offline.</p>";
     }
 }
-getSundayWeather();
+getLiveWeather();
 </script>
 
 
