Change weather card title to 'Sunday Weather'

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
     
     <div onclick="toggleWeatherCard()" style="padding: 12px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; background: rgba(255, 215, 0, 0.05);">
         <div style="text-align: left;">
-            <h3 style="margin: 0; color: #FFD700; font-size: 16px;">🌤️ Meadow Heights Weather</h3>
+            <h3 style="margin: 0; color: #FFD700; font-size: 16px;">🌤️ Sunday Weather</h3>
             <span id="weather-date-label" style="font-size: 10px; color: #00e676;">Sunday 21 Dec • Match Day</span>
         </div>
         <span id="toggle-icon" style="font-size: 11px; color: #FFD700; background: rgba(255,215,0,0.1); padding: 2px 8px; border-radius: 4px; font-weight: bold;">[ View Stats ]</span>
