Change live clock to 12-hour format

--- a/index.html
+++ b/index.html
@@ -313,9 +313,11 @@ async function updateWeatherPro() {
     const clockDiv = document.getElementById('live-clock');
     
     // ساعة حية
-    setInterval(() => {
-        if(clockDiv) clockDiv.innerText = new Date().toLocaleTimeString('en-GB', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
-    }, 1000);
+    // ساعة حية بنظام 12 ساعة
+setInterval(() => {
+    if(clockDiv) clockDiv.innerText = new Date().toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true });
+}, 1000);
+
 
     const now = new Date();
     const nextSunday = new Date(now);
